# am-vis

./: CMakeLists.txt
assets/atanor_entries/: artifacts.csv  creature_country.csv  creatures.csv  fractions.csv  horses.csv  items.csv  potions.csv  skills.csv  specializations.csv  spells.csv
assets/pseudonor_entries/: artifacts.csv  chargable_rocks.csv  fractions.csv  horses.csv  items.csv  skills.csv  spells.csv
db/: test.db
diagrams/: dao_diagram.drawio  db_diagram.drawio
libs/sqlite/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/DAO/: AbstractDAO.hpp  TransitiveDAO.hpp
src/DAO/atanor/: AtanorArtifactDAO.cpp  AtanorArtifactDAO.hpp  AtanorCountryDAO.cpp  AtanorCountryDAO.hpp  AtanorCreatureCountryDAO.cpp  AtanorCreatureCountryDAO.hpp  AtanorCreatureDAO.cpp  AtanorCreatureDAO.hpp  AtanorHorseDAO.cpp  AtanorHorseDAO.hpp
src/entries/atanor/: AtanorArtifact.cpp  AtanorArtifact.hpp  AtanorCountry.cpp  AtanorCountry.hpp  AtanorCreature.cpp  AtanorCreature.hpp  AtanorHorse.cpp  AtanorHorse.hpp
src/entries/properties/: ArtifactSlot.cpp  ArtifactSlot.hpp  Element.cpp  Element.hpp  ItemRarity.cpp  ItemRarity.hpp
src/tools/: sql_tools.hpp  string_tools.hpp
